<resources>
    <string name="app_name">慧居</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">慧居</string>
    <string name="title_dashboard"> 智能</string>
    <string name="title_notifications"> 我的</string>
    <string name="title_allhome">全屋</string>
    <string name="title_roomemanagement">房间管理</string>
    <string name="title_allequipment">全部设备</string>
    <string name="account">手机号码或用户名</string>
    <string name="password">密码</string>
    <string name="ture_password">确认密码</string>
    <string name="log_in">登录</string>
    <string name="forgot"><font colcor='#c4c4c4'>忘记密码？</font><b>获取帮助</b></string>
    <string name="sign_up"><font color='#c4c4c4'>还没有账号></font><b>注册</b></string>
    <string name="enroll">注册</string>
    <string-array name="choose_home">
        <item>全屋</item>
        <item>卧室</item>
        <item>卫生间</item>
        <item>客厅</item>
    </string-array>
    <string-array name="choose_curtain_model">
        <item>全关</item>
        <item>全开</item>
        <item>半开</item>
    </string-array>
    <string-array name="choose_wind_speed">
        <item>高</item>
        <item>中</item>
        <item>低</item>
    </string-array>
    <string-array name="choose_aircondition_modle">
        <item>制冷</item>
        <item>制热</item>
        <item>睡眠</item>
        <item>自动</item>
        <item>自定义</item>
    </string-array>
    <string-array name="choose_lights_model">
        <item>关闭</item>
        <item>普通模式</item>
        <item>呼吸灯模式</item>
        <item>晚睡模式</item>
        <item>自定义模式</item>
    </string-array>
    <string-array name="choose_mentor">
        <item>锁门</item>
        <item>开门</item>
        <item>警报模式</item>
        <item>反锁</item>
    </string-array>
    <string-array name="choose_waterheater">
        <item>关</item>
        <item>开</item>
    </string-array>
</resources>